// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should render a multiselect 1`] = `
<div
  className="yoast-field-group"
>
  <div
    className="yoast-field-group__title"
  >
    <label
      htmlFor="my-awesome-multiselect"
    >
      Nice label
    </label>
  </div>
  <select
    defaultValue={Array []}
    id="my-awesome-multiselect"
    multiple="multiple"
    name="my-selection[]"
  >
    <option
      value="hi"
    >
      hi
    </option>
    <option
      value="ho"
    >
      ho
    </option>
  </select>
</div>
`;

exports[`Select should render a select 1`] = `
<div
  className="yoast-field-group"
>
  <div
    className="yoast-field-group__title"
  >
    <label
      htmlFor="my-awesome-multiselect"
    >
      Nice label
    </label>
  </div>
  <select
    defaultValue="hi"
    id="my-awesome-multiselect"
    name="my-selection"
    onBlur={[Function]}
    onInput={null}
  >
    <option
      value="hi"
    >
      hi
    </option>
    <option
      value="ho"
    >
      ho
    </option>
  </select>
</div>
`;
